[update] Setup PHPCS & git hook pre-commit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     volumes:
       - ./src:/var/www
       - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
+      #- ./docker/nginx/htpasswd:/etc/nginx/.htpasswd
     networks:
       - fabuks-network
 
