--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,8 @@
 {
     "private": true,
     "scripts": {
+        "lint": "eslint --ext .js,.vue resources/js/",
+        "lint-fix": "eslint --fix --ext .js,.vue resources/js/",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
@@ -23,6 +25,8 @@
         "chart.js": "^2.9.3",
         "cross-env": "^7.0.2",
         "css-loader": "^3.4.2",
+        "eslint": "^6.8.0",
+        "eslint-plugin-vue": "^6.2.2",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
